fixed bug where the tablet radio was squashed due to tablet div

--- a/css/styles.css
+++ b/css/styles.css
@@ -409,7 +409,7 @@ header {
 		height: calc(100% - 80px);
 		width: 100%;
 		max-width: 1200px;
-		min-height: 680px;	
+		/*min-height: 680px;	*/
 	}
 	#logo {
 		display: none !important;
@@ -945,6 +945,10 @@ header {
 
 #radio #tablet-right-radio-top > p {
 	display: none !important;
+}
+#radio #tablet-left-radio {
+	width: 100%;
+	height: 100%;
 }
 
 
